tests/negative/typecheck/tuple_infer_given_unit.orng
// tuple_infer_given_unit.orng:6:13: error: expected a value of type `()`
//     ( .none, .none )
//            ^
// 
fn main() -> () {
    ( .none, .none )
}
